# Self-Updating-Knowledge-System-from-Multi-Media-Sources

./: .env.example  .firebaserc  .gitignore  PROJECT_REVIEW_REPORT.md  Procfile  WF_Update_Sources.json  firebase.json  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  style.css
.firebase/: hosting.ZGlzdA.cache  hosting.ZnJvbnRlbmRcZGlzdA.cache
New folder/: AGENTS.md  FILE_MAP.md  TASKS.md  codex_system_transition_brief.md
agent/: design-ui-designer.md  engineering-code-reviewer.md  engineering-frontend-developer.md  engineering-rapid-prototyper.md
backend_node/: .env.render.example  package-lock.json  package.json  requirements.txt
chatbot/: chatbot.css  chatbot.js
content/: introduction.txt
docs/: BAO_CAO_HE_THONG_DAY_DU.md  SYSTEM_FUNCTIONAL_REPORT.md
fix/: chatbot.js  script.js
frontend/: .env.example  .gitignore  index.html  package-lock.json  package.json  streamlit_app.py  tailwind.config.js  vite.config.js
logs/: moh_detail_module.html  moh_module.html  retrieval_log.jsonl
n8n workflow/: admin_pending_ingests.py  app.py  chroma_manager.py  document_repository.py  document_service.py  document_version_repository.py  embedding_store.py  firebase_init.py  ingest_job.py  ingest_job_repository.py  ingest_orchestration_service.py  metadata_mapper.py  n8n_auth.py  n8n_pending_preview.py  pending_ingest (1).py  pending_ingest.py  pending_ingest_repository.py  pending_ingest_service.py  skds_article_extractor.py  source_repository.py
profile/: profile.html
scripts/: ingest_external_news.py  set_admin.py  (+1 more)
(+456 files in other folders)
